@startuml
class LoginBean {
}

class GhostNetBean {
}

class ReportBean {
}

class StatisticBean {
}

class LabelBean {
}

class TestBean {
}

class DataController {
}

class DataService {
}

class DataServiceGeoNames {
}

LoginBean --> DataController : uses
GhostNetBean --> DataController : uses
ReportBean --> DataController : uses
StatisticBean --> DataController : uses
LabelBean --> DataController : uses
TestBean --> DataController : uses
DataController --> DataService : uses
DataController --> DataServiceGeoNames : uses
@enduml
